# kvs

./: Cargo.toml  README.md
benches/: benchmark-report-project-3.txt  kvs.rs
src/: kvs.rs  lib.rs
src/kvs/: client.rs  engine.rs  errors.rs  mod.rs  server.rs  sled.rs  store.rs  util.rs
tests/: cli.rs  kv_store.rs  tests.rs  thread_pool.rs
