[package]
name = "kvs"
description = "A persistent key/value store that can be accessed from the command line."
version = "0.1.0"
edition = "2021"
authors = ["Joe Ma <rikkaneko23@gmail.com>"]
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.3"
rand = "0.8.4"
panic-control = "0.1.4"
crossbeam-utils = "0.8.7"

[dependencies]
clap = { version = "~2.34.0", features = ["yaml"] }
serde = { version = "~1.0.133", features = ["derive"] }
bson = "~2.1"
thiserror = "~1.0.30"
slog = "~2.7.0"
slog-term = "~2.8.0"
slog-async = "~2.7.0"
sled = "~0.34.7"
quit = "~1.1.4"
dyn-clone = "~1.0.5"

[target.'cfg(unix)'.dependencies]
signal-hook = "~0.3.13"

[[bench]]
name = "kvs"
harness = false
path = "benches/kvs.rs"
